# wordle

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: counter.rs  letter_dist.rs  main.rs
wordle/: wordle.py
