[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Felix Clark <mfclark3690@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
